# rlqf

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
docs/: index.md  rlqf.md
docs/.obsidian/: workspace.json
docs/actor-critic/: policy-gradient.md  rlqf-objective.md  soft-rlqf.md
docs/convergence/: computational-complexity.md  convergence.md
docs/exploration/: adversarial-generation.md  curiosity-reward.md  distribution-shift.md  ensemble-ucb.md
docs/formulation/: critic-architecture.md  mdp-formulation.md
docs/foundations/: equivariance.md  mm-qm-gap.md  verification-generation-asymmetry.md
docs/losses/: critic-loss.md  energy-force-loss.md  kl-divergence-loss.md
docs/meta/: notation.md  open-questions.md  references.md
rlqf/: __init__.py  train.py  trainer.py
rlqf/actor/: __init__.py  mace_actor.py
rlqf/critic/: __init__.py  orbnet_critic.py
rlqf/data/: __init__.py  molecular_batch.py  replay_buffer.py
rlqf/exploration/: __init__.py  adversarial.py  ensemble_ucb.py  policy.py
rlqf/losses/: __init__.py  critic_loss.py  energy_force.py  kl_divergence.py
rlqf/utils/: __init__.py  graph.py
scripts/: run_toy.py
tests/: conftest.py
tests/validation/: test_accuracy.py  test_comparative.py  test_generalization.py  test_quantum_effects.py
